# spectraflex

./: .gitignore  CLAUDE.md  README.md  TESTING_GUIDE.md  pyproject.toml
docs/: api_reference.md  index.md  theory.md  usage_guide.md
docs/tutorials/: 01_getting_started.md  02_transfer_function_identification.md  03_transfer_function_libraries.md  04_complete_workflow.md
examples/: basic_identification.py  fatigue_comparison.py  getting_started.ipynb  library_workflow.py  spectral_prediction.py
src/spectraflex/: __init__.py  cli.py  fatigue.py  identify.py  library.py  predict.py  spectrum.py  statistics.py  transfer_function.py
src/spectraflex/io/: __init__.py  netcdf.py
src/spectraflex/orcaflex/: __init__.py  batch.py  extract.py  fatigue.py  post_calc.py  white_noise.py
tests/: conftest.py  test_fatigue.py  test_identify.py  test_orcaflex_fatigue.py  test_predict.py  test_spectrum.py  test_statistics.py  test_transfer_function.py
